--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run linter\" \"npm run build-babel\"",
     "build-babel": "babel js/src --watch --out-dir js/lib",
-    "linter": "esw --watch ./js/src/index.js"
+    "linter": "esw --watch ./js/src/*.js"
   },
   "repository": {
     "type": "git",
