--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["env"]
+  "presets": [
+    ["env", {
+      "debug": true,
+      "targets": {
+        "chrome": 52,
+        "firefox": 51,
+        "safari": 9,
+        "ie": 11,
+        "edge": 13
+      }
+    }]
+  ]
 }
